# gsoap-onvif

./: .clang-format  .gitignore  CMakeLists.txt
factory/: CMakeLists.txt  workloop.cmake
factory/include/: channel.hpp  fs.hpp  reader.hpp
factory/src/: fs.cpp  reader.cpp
factory/test/: test_analyser.cpp
include/: image_reader.hpp  logger.hpp  ptz_command.hpp  teacher.hpp
src/: image_reader.cpp  main.cpp  onvif_ptz_test.cpp  ptz_command.cpp  teacher.cpp
